[package]

name = "alexandria-server"
version = "0.0.1"
authors = ["Corey Richardson <corey@octayn.net>"]

[dependencies]
iron = "*"
logger = "*"
router = "*"
persistent = "*"
static = "*"
mount = "*"
bodyparser = "*"
hyper = "*"
url = "*"
lazy_static = "*"
postgres = "*"

[dependencies.alexandria]
git = "https://github.com/cmr/alexandria-common"
