[package]

name = "alexandria-server"
version = "0.0.1"
authors = ["Corey Richardson <corey@octayn.net>"]

[dependencies]
iron = "*"
logger = "*"
router = "*"
persistent = "*"
hyper = "*"
url = "*"
lazy_static = "*"
postgres = "*"

[dependencies.bodyparser]
git = "https://github.com/iron/body-parser"

[dependencies.mount]
git = "https://github.com/iron/mount"

[dependencies.static]
git = "https://github.com/iron/static"

[dependencies.alexandria]
git = "https://github.com/cmr/alexandria-common"
